<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.WelcomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="72dp"
        android:src="@drawable/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tittle_welcome"
        android:textSize="20dp"
        android:textStyle="bold"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="269dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:text="@string/description_welcome"
        android:textAlignment="center"
        android:textSize="15dp"
        android:alpha="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <Button
            android:id="@+id/to_login"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/login"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="522dp" />

        <Button
            android:id="@+id/to_register"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/register"
            tools:layout_editor_absoluteX="255dp"
            tools:layout_editor_absoluteY="522dp" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>